--- a/auctions/static/auctions/teste.html
+++ b/auctions/static/auctions/teste.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <div>
+        <embed src="star-anim.svg" width="200px" height="200px">
         <svg viewBox="0 0 10 10" xmlns="http://www.w3.org/2000/svg">
             <rect width="10" height="10">
                 <animate attributeName="rx" values="0;5;0" dur="10s" repeatCount="indefinite" />
             </rect>
         </svg>
+
         <svg viewBox="0 0 200 100" xmlns="http://www.w3.org/2000/svg">
             <!-- Example of a polygon with the default fill -->
             <polygon points="0,100 50,25 50,75 100,0" />
