--- a/auctions/static/auctions/layouttest.html
+++ b/auctions/static/auctions/layouttest.html
@@ -49,16 +49,18 @@
             Listing 3: Jeans
             <a href="/watch/3"><img src= "/static/auctions/star-off.svg"  width="30px" height="30px"/></a>
         </h2>
-        <div class="content123">
-            <p><b>Category:</b> Computers</p>
-            <p><b>Listed by:</b> admin</p>
-            <p><b>Date:</b> June 9, 2021, 9 a.m.</p>
-            <img src=/media/pictures/6939957-jeans-texture.jpg sizes="640x480">
-            <p>/media/pictures/6939957-jeans-texture.jpg</p>
-            <h3>Description:</h3>
-            <p>Textura jeans em jpg</p>
-            <p><b>Initial price:</b> $2.50</p>
-            <p><b>Current price:</b> $2.50</p>
+        <div class="row"> 
+            <div class="col-sm-4">
+                <p><b>Category:</b> Computers</p>
+                <p><b>Listed by:</b> admin</p>
+                <p><b>Date:</b> June 9, 2021, 9 a.m.</p>
+                <img src=/media/pictures/6939957-jeans-texture.jpg sizes="640x480">
+                <p>/media/pictures/6939957-jeans-texture.jpg</p>
+                <h3>Description:</h3>
+                <p>Textura jeans em jpg</p>
+                <p><b>Initial price:</b> $2.50</p>
+                <p><b>Current price:</b> $2.50</p>
+            </div>
         </div>
         <hr>
         <div>
